2009-10-25 Thomas Gamper <icicle@cg.tuwien.ac.at>

    * Source/x11/XGServerWindow.m
    Implement setMouseLocation:onScreen:.

2009-10-25 Thomas Gamper <icicle@cg.tuwien.ac.at>

    * Source/x11/XGGLContext.m
    * Source/x11/XGGLFormat.m
    * Headers/x11/XGOpenGL.h
    Clean up OpenGL stuff, reformat code and add Multisampling
    support.

2009-10-23 Fred Kiefer <FredKiefer@gmx.de>

	* Source/gsc/GSContext.m,
	* Headers/gsc/GSGStateOps.h,
	* Source/gsc/GSGState.m: Empty definitions of gradient methods.
	* Source/cairo/CairoGState.m: Simple cairo gradient implementation.

2009-10-20 Fred Kiefer <FredKiefer@gmx.de>

	* Source/winlib/WIN32GState.m: Small correction of last change.

2009-10-19 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/gsc/GSGStateOps.h,
	* Source/gsc/GSGState.m,
	* Source/art/path.m,
	* Source/art/ARTGState.m,
	* Source/cairo/CairoGState.m,
	* Source/xlib/XGGState.m,
	* Source/winlib/WIN32GState.m: Implement pattern colours for all backends.

2009-10-18 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/x11/XGServerWindow.m:
	* Source/x11/XGServerEvent.m:
	Experimental code to try to spot window deminiaturisation and send
	an event to the gui so that it knows about it.

2009-07-31  Adam Fedor  <fedor@gnu.org>

	* Version 0.17.1

2009-07-27 Fred Kiefer <FredKiefer@gmx.de>

	* Source/cairo/CairoFontEnumerator.m,
	* Source/xlib/GSXftFontInfo.m: Use DejaVu as another fallback
	font, as Bitstream Vera and FreeSans are no longer supplied
	directly by Debian.

2009-07-13 Fred Kiefer <FredKiefer@gmx.de>

        * Source/winlib/WIN32GState.m (-_paintPath:) Only draw when the
	fill/stroke colour has a non zero alpha. 

2009-07-10 Fred Kiefer <FredKiefer@gmx.de>

        * Source/cairo/CairoGState.m
	(-compositeGState:fromRect:toPoint:op:fraction:): Add hack to
	avoid scrolling problem for cairo > 1.8.	

2009-05-31 Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XWindowBuffer.m: Protect the XSHM code parts with
	#ifdef statements.
